project2/test/test_11712639_07.out
Error type 6 at line 5: rvalue on the left side of assignment operator
Error type 5 at line 5: unmatching types on both sides of assignment operator
Error type 6 at line 6: rvalue on the left side of assignment operator
Error type 6 at line 7: rvalue on the left side of assignment operator
Error type 6 at line 9: rvalue on the left side of assignment operator
Error type 6 at line 10: rvalue on the left side of assignment operator
Error type 6 at line 11: rvalue on the left side of assignment operator
Error type 5 at line 11: unmatching types on both sides of assignment operator
Error type 6 at line 12: rvalue on the left side of assignment operator
Error type 6 at line 13: rvalue on the left side of assignment operator
Error type 6 at line 15: rvalue on the left side of assignment operator
Error type 6 at line 16: rvalue on the left side of assignment operator
